--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <button (click)="connect()">Connect</button>
 <button (click)="disconnect()">Disconnect</button>
-<button (click)="sendData()">Send Data</button>
+<button (click)="join()">Join</button>
