feat: add tailwind config and started a type package

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div>hey!</div>
-
-<button (click)="connect()">Connect</button>
-<button (click)="disconnect()">Disconnect</button>
-<button (click)="join()">Join</button>
+<router-outlet></router-outlet>
